--- a/src/pages/other-artist.astro
+++ b/src/pages/other-artist.astro
@@ -1,9 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro"
 ---
-  <Layout>
-<h1>2PAC</h1>
-<hl>
-  </Layout>
-  <img src="https://media.tenor.com/fuAPSYekSUYAAAAM/boogie-dance.gif" alt="" 
-  
+  <Layout title="Other Artists">
+    <div class="bg-red-700	 h-screen w-full" >
+
+      <h1>2PAC</h1>
+      <img src="https://s.mxmcdn.net/images-storage/albums5/4/3/7/0/6/5/49560734_350_350.jpg" alt="">
+      <h1>YEAT</h1> 
+      <img src="https://www.laut.de/Yeat/Alben/Lyfe-119141/yeat-lyfe-220659.jpg?ae045e" alt="">
+      <h1>50CENT</h1>
+      <img src="https://i.pinimg.com/originals/f0/3e/c5/f03ec5c7f7432287579ffbc852d7ecdd.jpg" alt="">
+
+    </div>
+</Layout>
