--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,12 +17,17 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-	<a href="/other-artist">
-	OTHER ARTIST
-	</a>
-		<a href="../">
-	HOME
-	</a>
+		<nav class="bg-red-700 font-bold flex items-center justify-evenly py-14 ">
+
+			<img class="rounded-full h-16 border" src="https://media.tenor.com/gswzCIyYfRUAAAAj/rapping-50cent" alt="">
+			<a class="hover:text-blue-500 transition" href="/other-artist">
+			OTHER ARTIST
+			</a>
+				<a href="../">
+			HOME
+			</a>
+
+		</nav>
 		<slot />
 	</body>
 </html>
