--- a/src/pages/other-artist.astro
+++ b/src/pages/other-artist.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro"
   <Layout title="Other Artists">
     <div class="bg-red-700 flex flex-col gap-4 	 h-screen w-full" >
       <Card title="2PAC" img="https://s.mxmcdn.net/images-storage/albums5/4/3/7/0/6/5/49560734_350_350.jpg"/>
-      <Card title="YEAT" img="https://www.laut.de/Yeat/Alben/Lyfe-119141/yeat-lyfe-220659.jpg?ae045e"/>
+      <Card title="EMINEM" img="https://i1.sndcdn.com/artworks-000303159348-58ofr7-t500x500.jpg"/>
       <Card title="50CENT" img="https://i.pinimg.com/originals/f0/3e/c5/f03ec5c7f7432287579ffbc852d7ecdd.jpg"/>
     
       
